crates/tools/src/LSP/src/snapshots/kcl_language_server__signature_help__tests__pkg_function_signature_help_test_1.snap
---
source: tools/src/LSP/src/signature_help.rs
expression: "format!(\"{:#?}\", res)"
---
SignatureHelp {
    signatures: [
        SignatureInformation {
            label: "function gcd(a: int, b: int) -> int",
            documentation: None,
            parameters: Some(
                [
                    ParameterInformation {
                        label: Simple(
                            "a: int",
                        ),
                        documentation: None,
                    },
                    ParameterInformation {
                        label: Simple(
                            "b: int",
                        ),
                        documentation: None,
                    },
                ],
            ),
            active_parameter: Some(
                1,
            ),
        },
    ],
    active_signature: None,
    active_parameter: None,
}
